# libsecureid

./: CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  libsecureidConfig.cmake  secureid.c  secureid.h
test/: CMakeLists.txt  copy.c  gendomain.c  parse.c  rid.c  sid.txt
